--- a/src/app/components/main-login/choose-avatar/choose-avatar.component.scss
+++ b/src/app/components/main-login/choose-avatar/choose-avatar.component.scss
@@ -3,8 +3,8 @@
   font-family: Nunito;
 }
 
-.avatarSektion {
-  @include SektionBody;
+section {
+  @include SectionBody;
 }
 .avatarContainer {
   @include Card;
