--- a/src/app/components/main-login/register/register.component.html
+++ b/src/app/components/main-login/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="registerSektion">
+<section>
   <app-start-header [display]="'none'"></app-start-header>
   <div class="registerContainer">
     <div class="registerTop">
@@ -12,12 +12,10 @@
         >
         </app-small-btn>
       </div>
-      <span> {{ 'createAccount.header' | translate }}</span>
+      <span> {{ "createAccount.header" | translate }}</span>
     </div>
     <div class="registerInfoText">
-      <span
-        >{{ 'createAccount.infoText' | translate }}</span
-      >
+      <span>{{ "createAccount.infoText" | translate }}</span>
     </div>
     <form
       (ngSubmit)="onSubmit(contactForm)"
@@ -38,7 +36,7 @@
           [ngClass]="{ aktivInput: nameField.valid && nameField.touched }"
         />
         @if (!nameField.valid && nameField.touched) {
-        <p class="error">{{ 'createAccount.errorText' | translate }}</p>
+        <p class="error">{{ "createAccount.errorText" | translate }}</p>
         }
       </div>
       <div class="inputContainer">
@@ -56,16 +54,16 @@
           pattern="[^@]+@[^.]+\..+"
         />
         @if (!emailField.valid && emailField.touched) {
-        <p class="error">{{ 'createAccount.errorText2' | translate }}</p>
+        <p class="error">{{ "createAccount.errorText2" | translate }}</p>
         }
       </div>
       <div class="inputContainer">
         <img class="iconP" src="./assets/img/login/lock.png" alt="" />
-        <input 
+        <input
           class="inputField"
           #passwordField="ngModel"
           minlength="6"
-          maxlength="16" 
+          maxlength="16"
           [(ngModel)]="loginService.password"
           name="password"
           placeholder="{{ 'createAccount.inputField3' | translate }}"
@@ -78,10 +76,15 @@
           cols="30"
           rows="10"
         />
-        <img class="passwordEye" (click)="loginService.togglePasswordVisibility()" [src]="loginService.passwordIcon" alt="Toggle visibility">
+        <img
+          class="passwordEye"
+          (click)="loginService.togglePasswordVisibility()"
+          [src]="loginService.passwordIcon"
+          alt="Toggle visibility"
+        />
         @if (!passwordField.valid && passwordField.touched) {
         <p class="error">
-          {{ 'createAccount.errorText3' | translate }}
+          {{ "createAccount.errorText3" | translate }}
         </p>
         }
       </div>
@@ -97,10 +100,10 @@
           />
         </div>
         <span
-          >{{ 'createAccount.midText' | translate }}
+          >{{ "createAccount.midText" | translate }}
           <span class="fontColor" routerLink="/privacy-policy"
-            >{{ 'createAccount.midText2' | translate }} </span
-          >{{ 'createAccount.midText3' | translate }}</span
+            >{{ "createAccount.midText2" | translate }} </span
+          >{{ "createAccount.midText3" | translate }}</span
         >
       </div>
       <div class="registerBottom">
@@ -108,10 +111,10 @@
           [ngClass]="{ aktivButton: isChecked && contactForm.valid }"
           [disabled]="!isChecked || !contactForm.valid"
         >
-        {{ 'createAccount.Btn' | translate }}
+          {{ "createAccount.Btn" | translate }}
         </button>
       </div>
     </form>
   </div>
   <app-footer></app-footer>
-</div>
+</section>
