--- a/src/app/components/main-login/register/register.component.scss
+++ b/src/app/components/main-login/register/register.component.scss
@@ -1,6 +1,6 @@
 @import "../../../shared/components/login/mixins/mixin.scss";
-.registerSektion {
-  @include SektionBody;
+section {
+  @include SectionBody;
 }
 .registerContainer {
   @include Card;
