--- a/src/app/shared/components/header/edit-user/edit-user.component.html
+++ b/src/app/shared/components/header/edit-user/edit-user.component.html
@@ -11,7 +11,7 @@
       (click)="closeCurrentProfile()"
     ></app-small-btn>
   </div>
-  <img src="{{ i.avatar }}" class="profileImg" (click)="showSideMenu()" />
+  <img src="{{ i.avatar }}" class="profileImg" />
   <div class="detailsBox">
     <div class="editBtnPosition">
       <p class="name">{{ i.firstName }} {{ i.lastName }}</p>
