--- a/src/app/components/main-login/login/login.component.scss
+++ b/src/app/components/main-login/login/login.component.scss
@@ -3,8 +3,8 @@
   overflow-x: hidden;
   overflow-y: hidden;
 }
-.loginSektion {
-  @include SektionBody;
+section {
+  @include SectionBody;
 }
 .loginContainer {
   @include Card;
