--- a/src/app/components/main-login/password-forget/password-forget.component.html
+++ b/src/app/components/main-login/password-forget/password-forget.component.html
@@ -1,4 +1,4 @@
-<div class="passwordSektion">
+<section>
   <app-start-header [display]="'none'"></app-start-header>
   <div class="passwordContainer">
     <div class="passwordTop">
@@ -11,10 +11,10 @@
         >
         </app-small-btn>
       </div>
-      <span>{{ 'passwordForget.header' | translate }}</span>
+      <span>{{ "passwordForget.header" | translate }}</span>
     </div>
     <div class="passwordInfoText">
-      <span>{{ 'passwordForget.infoText' | translate }}</span>
+      <span>{{ "passwordForget.infoText" | translate }}</span>
     </div>
     <form
       (ngSubmit)="onSubmit(contactForm)"
@@ -36,20 +36,18 @@
           pattern="[^@]+@[^.]+\..+"
         />
         @if (!emailField.valid && emailField.touched) {
-        <p class="error">{{ 'login.errorText' | translate }}</p>
+        <p class="error">{{ "login.errorText" | translate }}</p>
         }
       </div>
       <div class="bottomInfoText">
-        <span>
-          {{ 'passwordForget.infoTextBottom' | translate }}</span
-        >
+        <span> {{ "passwordForget.infoTextBottom" | translate }}</span>
       </div>
       <div class="passwordBottom">
         <button
           [ngClass]="{ aktivButton: contactForm.valid }"
           [disabled]="!contactForm.valid"
         >
-        {{ 'passwordForget.Btn' | translate }}
+          {{ "passwordForget.Btn" | translate }}
         </button>
       </div>
     </form>
@@ -58,4 +56,4 @@
     <img src="./assets/img/login/email-send-btn.svg" alt="" />
   </div>
   <app-footer></app-footer>
-</div>
+</section>
