--- a/src/app/components/main-login/password-reset/password-reset.component.html
+++ b/src/app/components/main-login/password-reset/password-reset.component.html
@@ -1,4 +1,4 @@
-<div class="passwordSektion">
+<section>
   <app-start-header [display]="'none'"></app-start-header>
   <div class="passwordContainer">
     <div class="passwordTop">
@@ -11,7 +11,7 @@
         >
         </app-small-btn>
       </div>
-      <span>{{ 'passwordReset.header' | translate }}</span>
+      <span>{{ "passwordReset.header" | translate }}</span>
     </div>
 
     <form
@@ -39,7 +39,7 @@
         />
         @if (!passwordField.valid && passwordField.touched) {
         <p class="error">
-          {{ 'passwordReset.errorText' | translate }}
+          {{ "passwordReset.errorText" | translate }}
         </p>
         }
       </div>
@@ -66,7 +66,7 @@
           class="error"
           *ngIf="passwordRepeatField.touched && !passwordsMatch()"
         >
-        {{ 'passwordReset.errorText2' | translate }}
+          {{ "passwordReset.errorText2" | translate }}
         </p>
       </div>
       <div class="passwordBottom">
@@ -74,10 +74,10 @@
           [ngClass]="{ aktivButton: contactForm.valid && passwordsMatch() }"
           [disabled]="!contactForm.valid || !passwordsMatch()"
         >
-        {{ 'passwordReset.Btn' | translate }}
+          {{ "passwordReset.Btn" | translate }}
         </button>
       </div>
     </form>
   </div>
   <app-footer></app-footer>
-</div>
+</section>
