--- a/src/app/components/main-login/password-reset/password-reset.component.scss
+++ b/src/app/components/main-login/password-reset/password-reset.component.scss
@@ -1,6 +1,6 @@
 @import "../../../shared/components/login/mixins/mixin.scss";
-.passwordSektion {
-  @include SektionBody;
+section {
+  @include SectionBody;
 }
 .passwordContainer {
   max-width: 606px;
