--- a/src/app/components/main-login/password-forget/password-forget.component.scss
+++ b/src/app/components/main-login/password-forget/password-forget.component.scss
@@ -1,7 +1,7 @@
 @import "../../../shared/components/login/mixins/mixin.scss";
 
-.passwordSektion {
-  @include SektionBody;
+section {
+  @include SectionBody;
 }
 
 .passwordContainer {
