--- a/src/app/components/sidebar/sidebar-channels/add-new-channel/add-new-channel.component.html
+++ b/src/app/components/sidebar/sidebar-channels/add-new-channel/add-new-channel.component.html
@@ -10,8 +10,8 @@
 <div class="newChannelDescription">
   @if (!showNextWindow) {
   <div class="whiteWindow">
-    <div class="posiotionHeader">
-      <p>{{ 'add-new-channel.header' | translate }}</p>
+    <div class="positionHeader">
+      <p>{{ "add-new-channel.header" | translate }}</p>
       <app-small-btn
         [imgSrc]="'closeIcon.svg'"
         [imgSize]="'16px'"
@@ -20,21 +20,15 @@
         (click)="toggleShowAddChannelBox()"
       ></app-small-btn>
     </div>
-    <span class="infoMsg"
-      >{{ 'add-new-channel.info' | translate }}</span
-    >
+    <span class="infoMsg">{{ "add-new-channel.info" | translate }}</span>
     <div class="descriptionBox">
-      <p>{{ 'add-new-channel.header2' | translate }}</p>
+      <p>{{ "add-new-channel.header2" | translate }}</p>
       &nbsp;
-      <span>{{ 'add-new-channel.required' | translate }}</span>
+      <span>{{ "add-new-channel.required" | translate }}</span>
       @if (chechIfChannelExist(channelName)) {
-        <p class="warning">{{ 'add-new-channel.warning' | translate }}</p>
+      <p class="warning">{{ "add-new-channel.warning" | translate }}</p>
       }
-      <img
-        class="hashtag"
-        src="./assets/img/hashtag.svg"
-        alt=""
-      />
+      <img class="hashtag" src="./assets/img/hashtag.svg" alt="" />
     </div>
     <input
       type="text"
@@ -45,9 +39,9 @@
       (keyup)="checkIfChannelNameIsValid(channelName)"
     />
     <div class="descriptionBox">
-      <p>{{ 'add-new-channel.description' | translate }}</p>
+      <p>{{ "add-new-channel.description" | translate }}</p>
       &nbsp;
-      <span>{{ 'add-new-channel.optional' | translate }}</span>
+      <span>{{ "add-new-channel.optional" | translate }}</span>
     </div>
     <textarea
       id=""
@@ -63,17 +57,17 @@
         [disabled]="!channelService.btnIsValid"
         [ngClass]="{
           disabledBtn: !channelService.btnIsValid,
-          furterBtnClass: channelService.btnIsValid
+          enableBtn: channelService.btnIsValid
         }"
       >
-      {{ 'add-new-channel.create' | translate }}
+        {{ "add-new-channel.create" | translate }}
       </button>
     </div>
   </div>
   } @if (showNextWindow || showNextWindowMobile) {
-  <div class="smalWhiteBox" (click)="toggleAddedUserBox()">
+  <div class="smallWhiteBox" (click)="toggleAddedUserBox()">
     <div class="headerAddPeople">
-      <h2> {{ 'add-new-channel.addPeople' | translate }}</h2>
+      <h2>{{ "add-new-channel.addPeople" | translate }}</h2>
       <app-small-btn
         [imgSrc]="'closeIcon.svg'"
         [imgSize]="'16px'"
@@ -90,7 +84,11 @@
         alt=""
         (click)="toggleBtnFalse()"
       />
-      <p> {{ 'add-new-channel.addAll' | translate }}&nbsp;<span> {{ 'add-new-channel.devspace' | translate }}</span></p>
+      <p>
+        {{ "add-new-channel.addAll" | translate }}&nbsp;<span>
+          {{ "add-new-channel.devspace" | translate }}</span
+        >
+      </p>
     </div>
     <div class="positionSelectionBtn">
       <img
@@ -99,7 +97,7 @@
         }}"
         (click)="toggleBtnTrue()"
       />
-      <p> {{ 'add-new-channel.add' | translate }}</p>
+      <p>{{ "add-new-channel.add" | translate }}</p>
     </div>
     <div class="addedUserBox" *ngIf="changeImg">
       <div
@@ -143,7 +141,9 @@
       </div>
     </div>
     <div class="positionCreateBtn">
-      <button class="btnBox" (click)="addNewChannel()"> {{ 'add-new-channel.create' | translate }}</button>
+      <button class="btnBox" (click)="addNewChannel()">
+        {{ "add-new-channel.create" | translate }}
+      </button>
     </div>
   </div>
   }
