select textarea at onload desktop view

--- a/src/app/components/main-chat/chat-content/chat-content.component.html
+++ b/src/app/components/main-chat/chat-content/chat-content.component.html
@@ -35,5 +35,6 @@
     [currentChannel]="currentChannel"
     (newMsgEmitter)="editMsgEmitter($event)"
     [target]="'chats'"
+    [viewWidth]="viewWidth"
   ></app-chat-msg-box>
 </section>
