update disable login btns

--- a/src/app/components/main-login/login/login.component.html
+++ b/src/app/components/main-login/login/login.component.html
@@ -72,10 +72,14 @@
         <div></div>
       </div>
 
-      <div (click)="loginService.googleLogin()" class="googleLogingContainer">
+      <button
+        (click)="loginService.googleLogin()"
+        class="googleLogingContainer"
+        [disabled]="loginService.isBtnDisabled"
+      >
         <img src="./assets/img/login/google.svg" alt="" />
         <span>{{ "login.googleBtn" | translate }}</span>
-      </div>
+      </button>
 
       <div class="loginBottom">
         <button
