--- a/src/app/shared/components/login/mixins/mixin.scss
+++ b/src/app/shared/components/login/mixins/mixin.scss
@@ -84,6 +84,7 @@
   border-radius: 25px;
   font-size: 18px;
   font-weight: 600;
+  cursor: default;
 }
 @mixin aktivButtonBlue {
   padding: 12px 25px;
