--- a/src/app/shared/components/login/start-header/start-header.component.html
+++ b/src/app/shared/components/login/start-header/start-header.component.html
@@ -36,7 +36,7 @@
     <div>
       <span>{{ "start-header.new" | translate }}</span>
       <div class="createAccountContainer">
-        <span routerLink="/register" class="createAccoun">{{
+        <span routerLink="/register" class="createAccount">{{
           "start-header.create" | translate
         }}</span>
       </div>
