--- a/src/app/shared/components/login/footer/footer.component.scss
+++ b/src/app/shared/components/login/footer/footer.component.scss
@@ -6,7 +6,6 @@
   padding-top: 132px;
   padding-bottom: 24px;
   width: 100vw;
-
   > a {
     font-size: 18px;
     font-weight: 400px;
@@ -18,6 +17,7 @@
     border-radius: 100px;
     border: 1px solid #eceefe;
     &:hover {
+      color: #444df2;
       border: 1px solid #444df2;
     }
   }
