design loading dialog component

--- a/src/app/components/main-login/loading-dialog/loading-dialog.component.html
+++ b/src/app/components/main-login/loading-dialog/loading-dialog.component.html
@@ -1,1 +1,13 @@
-<p>loading-dialog works!</p>
+@if (loginService.isBtnDisabled) {
+<div class="loading-dialog">
+  <div id="loading" class="loader"></div>
+  <div id="loadingText" class="loading-text">
+    <p>
+      {{ "login.loginDialog0" | translate }}
+    </p>
+    <p>
+      {{ "login.loginDialog1" | translate }}
+    </p>
+  </div>
+</div>
+}
