--- a/src/app/components/main-chat/chat-msg-box/chat-msg-box.component.html
+++ b/src/app/components/main-chat/chat-msg-box/chat-msg-box.component.html
@@ -22,6 +22,8 @@
       type="file"
       #fileInput
       id="file"
+      name="file"
+      autocomplete="off"
       style="display: none"
       (change)="onFileChange($event)"
       multiple
