--- a/src/app/shared/components/header/search-bar/search-bar.component.html
+++ b/src/app/shared/components/header/search-bar/search-bar.component.html
@@ -1,5 +1,8 @@
 <div class="inputPosition">
   <input
+    id="searchField"
+    name="searchField"
+    autocomplete="off"
     type="text"
     maxlength="24"
     placeholder="{{ 'search-bar.placeholder' | translate }}"
