--- a/src/app/components/main-chat/show-channel-member/show-channel-member.component.html
+++ b/src/app/components/main-chat/show-channel-member/show-channel-member.component.html
@@ -101,6 +101,9 @@
       </div>
       <input
         type="text"
+        id="userName"
+        name="userName"
+        autocomplete="off"
         class="inputfieldStyle"
         [(ngModel)]="userName"
         (keyup)="filterUsers(userName)"
