--- a/src/app/shared/components/overlay/overlay.component.scss
+++ b/src/app/shared/components/overlay/overlay.component.scss
@@ -16,16 +16,22 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 75%;
+  width: auto;
   height: auto;
+  max-height: 80%;
+  max-width: 80%;
   img {
-    width: 100%;
+    width: auto;
     height: auto;
+    max-height: 100%;
+    max-width: 100%;
     border-radius: 12px;
   }
   video {
-    width: 100%;
+    width: auto;
     height: auto;
+    max-height: 100%;
+    max-width: 100%;
   }
 }
 
