update for server file download

--- a/src/app/components/main-chat/single-chat/single-chat.component.html
+++ b/src/app/components/main-chat/single-chat/single-chat.component.html
@@ -89,11 +89,14 @@
           <span>{{ "single-chat.edit" | translate }}</span>
           }
         </div>
+        @if(filePath) {
         <app-attachments
           [chatId]="chat.id"
           [openOnSecondaryChat]="openOnSecondaryChat"
           [viewWidth]="viewWidth"
+          [filePath]="filePath"
         ></app-attachments>
+        }
       </div>
       @if (!isPrivatChannel && !openOnSecondaryChat) {
       <div class="answers">
