--- a/src/app/shared/components/header/search-bar/search-bar.component.html
+++ b/src/app/shared/components/header/search-bar/search-bar.component.html
@@ -1,7 +1,7 @@
 <div class="inputPosition">
   <input
-    id="searchField"
-    name="searchField"
+    id="searchBar"
+    name="searchBar"
     autocomplete="off"
     type="text"
     maxlength="24"
