--- a/src/app/shared/components/header/edit-user/edit-user-details/edit-user-details.component.scss
+++ b/src/app/shared/components/header/edit-user/edit-user-details/edit-user-details.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../../../styles.scss";
+@import "../../../../../../assets/mixins/responsive.scss";
 
 .whiteBox {
   width: 400px;
